<resources>
    <string name="app_name">AE</string>
    <string name="button_text">Button</string>
    <string name="solved_text">Solved</string>
    <string name="title_text">Crimes</string>
    <string name="details_text">Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frag_list_date">Date: </string>
    <string name="frag_list_title">Title: </string>
    <string name="frag_list_check">Checked</string>
    <string name="frag_det_text">Text</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>
</resources>
