<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center">

        <TextView
            android:id="@+id/title_crimes"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"

            android:text="@string/title_text" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:gravity="center">

        <TextView
            android:id="@+id/title_details"
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"

            android:text="@string/details_text" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center">
        <EditText
            android:id="@+id/crime_text_box"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:gravity="center">

        <Button
            android:id="@+id/button_sas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/button_text" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkbox"
            android:text="@string/solved_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="70"
        android:gravity="center">
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recycler">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>
</LinearLayout>