<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="activityexample.mex.ae.list_fragment.ListFragmentItem">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="70"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="4dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/frag_list_title"
                        android:text="@string/frag_list_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/frag_list_title_text"
                        android:text="@string/frag_list_title" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="4dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/frag_list_date"
                        android:text="@string/frag_list_date" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/frag_list_date_text"
                        android:text="@string/frag_list_date" />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="30"
                android:layout_height="match_parent"
                android:gravity="center">
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/frag_list_checkbox"
                    android:enabled="false"
                    android:text="@string/solved_text"/>
            </LinearLayout>
        </LinearLayout>
</FrameLayout>
